# rec_sys_edu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  science-work3 (1).ipynb
configs/: itmrec.yaml  oulad.yaml
notebooks/: 00_quickstart.ipynb  01_data_analysis.ipynb  02_model_development.ipynb  03_testing.ipynb  04_oulad_data.ipynb  05_oulad_model.ipynb  06_hypotheses.ipynb  07_trajectories.ipynb  08_student_profile_trajectories.ipynb  09_feature_importance_analysis.ipynb  README.md
notebooks/data/processed/oulad/tables/: summary_stats.json
schemes/: OULAD_adapt.drawio  OULAD_adapt.xml  agent.xml  buffer.xml  data.xml  env_train.xml  main_scheme.xml
scripts/: analyze_oulad.py  download_data.py  evaluate_system.py  generate_visualizations.py  prepare_oulad.py  run_importance_analysis.py  train_deepfm.py  train_dqn.py
src/: __init__.py  api.py  cli.py
src/analysis/: __init__.py  feature_importance.py
src/data/: __init__.py  dataset.py  loaders.py  oulad_reports.py  preprocess_itmrec.py  preprocess_oulad.py  preprocessing.py  schemas.py
src/environment/: __init__.py  action_mask.py  educational_env.py  oulad_env.py  oulad_state.py  reward.py  state_encoder.py
src/evaluation/: __init__.py  adaptability.py  comparative_tester.py  experiment_runner.py  long_term_evaluator.py  metrics.py  novelty_ablation.py  statistics.py  system_evaluator.py  trajectory_visualizer.py
src/models/: __init__.py  deepfm_svdpp.py  dueling_dqn.py
src/training/: __init__.py  config.py  replay_buffer.py  train_dqn.py  train_static.py  trainer.py
src/utils/: __init__.py  helpers.py  visualization.py
src/visualization/: __init__.py  student_trajectories.py
tests/: __init__.py  test_dqn_mask.py  test_invariants.py
